Replace maintainer mail address

--- a/arsnova-couchdb/Dockerfile
+++ b/arsnova-couchdb/Dockerfile
@@ -1,4 +1,4 @@
 FROM couchdb:1
-LABEL maintainer "Daniel Gerhardt <code@z.dgerhardt.net>"
+LABEL maintainer "Daniel Gerhardt <code@dgerhardt.net>"
 
 COPY usr/local/etc/couchdb/local.ini /usr/local/etc/couchdb/local.ini
